# financial-report-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PHASE1_SUMMARY.md  README.md  pyproject.toml  pytest_output.txt
docs/: architecture_api_frontend_optimization_plan.md  backend_api_reference.md  backend_functions_and_data_sources.md  class_method_reference.md  coding_conventions.md  frontend_api_sdk_and_design_plan.md  implementation_plan.md  mysql_guide.md  sqlserver_migration_plan.md  variable_naming_table.md
docs/plans/: 2026-03-23-baidu-finance-crawler-design.md  2026-03-23-baidu-finance-interface-spec.md  2026-03-23-baidu-finance-roadmap.md  2026-03-23-baidu-finance-storage-spec.md
frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/openapi/: README.md  openapi.json
scripts/: check_mysql_connection.py  crawl_baidu_finance.py  crawl_baidu_finance_batch.py  export_openapi.py  import_financial_archives_to_mysql.py  playwright_smoke.py  run_baidu_finance_scheduler.py
sql/: financial_reports_schema.sql
src/: main.py
tests/: __init__.py  test_analyzer.py  test_api.py  test_archive_repository.py  test_baidu_finance_parsers.py  test_baidu_finance_service.py  test_continuous_scheduler.py  test_crawl_run_repository.py  test_data_fetcher.py  test_export.py  test_legacy_compatibility_routes.py  test_llm_engine.py  test_precision.py  test_processor.py  test_prompt_context.py  test_routes_workspace.py  test_workspace_api.py  test_workspace_metric_fallbacks.py  test_workspace_metrics.py  test_workspace_repository.py
(+80 files in other folders)
